--- a/src/index.css
+++ b/src/index.css
@@ -2,6 +2,7 @@
 @tailwind components;
 @tailwind utilities;
 
+/* @import 'node_modules/react-modal-video/scss/modal-video.scss'; */
 * {
   padding: 0;
   margin: 0;
@@ -294,4 +295,77 @@ p {
       opacity: 1;
       bottom: 50px;
   }
+}
+
+@media (min-width: 1200px) {
+  .cover {
+    max-width: 1200px;
+  }
+}
+@media (min-width: 992px) {
+  .cover {
+    max-width: 960px;
+  }
+}
+@media (min-width: 768px) {
+  .cover {
+    max-width: 720px;
+  }
+}
+@media (min-width: 576px) {
+  .cover {
+    max-width: 540px;
+  }
+}
+.cover {
+  width: 100%;
+  padding-right: calc(15px);
+  padding-left: calc(15px);
+  margin-right: auto;
+  margin-left: auto;
+}
+.custom-img {
+  background-image: url("https://images.unsplash.com/photo-1454496522488-7a8e488e8606?ixid=MXwxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHw%3D&ixlib=rb-1.2.1&auto=format&fit=crop&w=1955&q=80");
+}
+
+
+/* new side  */
+* {
+  margin: 0;
+  padding: 0;
+  /* font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif; */
+}
+
+.main {
+  width: 100%;
+  height: 100%;
+}
+
+video {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+  position: relative;
+}
+
+.content {
+  position: absolute;
+  
+  top: 0;
+  display: flex;
+  z-index: 2;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  color: white;
+}
+
+.overlay {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0,0,0,.4);
+  /* background-color: #000000cc; */
 }
