--- a/src/index.css
+++ b/src/index.css
@@ -369,3 +369,10 @@ video {
   background-color: rgba(0,0,0,.4);
   /* background-color: #000000cc; */
 }
+
+/* maps  */
+.map-container {
+  width: 100%;
+  height: 60vh;
+  
+}
